--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -77,7 +77,7 @@ jobs:
           docker build \
             --build-arg CARGO_HOME="/cargo-cache" \
             --build-arg GITHUB_TOKEN=${{ secrets.GH_PAT }} \
-            -t remo-core-build \
+            -t remo-win-build \
             -f .docker/Dockerfile.ci-windows .
 
       - name: Build Release Binary
@@ -87,7 +87,7 @@ jobs:
             -v ${{ github.workspace }}/third_party:/app/third_party \
             -e CARGO_NET_GIT_FETCH_WITH_CLI=true \
             -e GITHUB_TOKEN=${{ secrets.GH_PAT }} \
-            remo-core-build \
+            remo-win-build \
             sh -c "git config --global url.'https://${{ secrets.GH_PAT }}@github.com/'.insteadOf 'https://github.com/' && \
                   cargo clippy --target x86_64-pc-windows-gnu && \
                   cargo build --release --target x86_64-pc-windows-gnu"
@@ -95,15 +95,15 @@ jobs:
       - name: Prepare Release Package
         run: |
           mkdir -p release
-          cp target/x86_64-pc-windows-gnu/release/remo-core.exe ./release/
+          cp target/x86_64-pc-windows-gnu/release/remo-win.exe ./release/
           cp third_party/ffmpeg/bin/*.dll ./release/
-          cd release && zip -r remo-core.zip * && cd ..
+          cd release && zip -r remo-win.zip * && cd ..
 
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: remo-core
-          path: release/remo-core.zip
+          name: remo-win
+          path: release/remo-win.zip
 
   create-release:
     name: Create Release
@@ -116,7 +116,7 @@ jobs:
       - name: Download Release Artifact
         uses: actions/download-artifact@v4
         with:
-          name: remo-core
+          name: remo-win
           path: release
 
       - name: Generate Changelog
@@ -162,7 +162,7 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          files: release/remo-core.zip
+          files: release/remo-win.zip
           name: ${{ github.ref_name }}
           tag_name: ${{ github.ref_name }}
           body: |
