--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,6 +1,14 @@
 name: CICD
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+    tags:
+      - 'v*'
+  pull_request:
+    branches:
+      - master
 
 # Add permissions for the workflow
 permissions:
@@ -9,6 +17,8 @@ permissions:
 jobs:
   setup-ffmpeg:
     name: Setup FFmpeg
+    # Only run on push to master or PR, skip for tag pushes
+    if: github.event_name != 'push' || !startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -38,6 +48,8 @@ jobs:
 
   build:
     name: Build and Test
+    # Only run on push to master or PR, skip for tag pushes
+    if: github.event_name != 'push' || !startsWith(github.ref, 'refs/tags/')
     needs: setup-ffmpeg
     runs-on: ubuntu-latest
     steps:
@@ -104,19 +116,20 @@ jobs:
         with:
           name: remo-win
           path: release/remo-win.zip
+          retention-days: 90  # Keep artifacts for 90 days
 
   create-release:
     name: Create Release
-    needs: build
-    runs-on: ubuntu-latest
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       
-      - name: Download Release Artifact
-        uses: actions/download-artifact@v4
+      - name: Download Latest Artifact
+        uses: dawidd6/action-download-artifact@v3
         with:
-          name: remo-win
+          workflow: cicd.yml
+          branch: master
           path: release
 
       - name: Generate Changelog
@@ -171,8 +184,17 @@ jobs:
 
             ## Build
             Info
-            - Built for Windows
-            - Includes FFmpeg support with required DLLs
-            - All files are included in the zip archive
+            - Built for Windows 11
+            - All required DLLs are included in the zip archive 
+            - Almost no installation needed.
+            - Download latest vigemBus if you want to use gamepad from https://github.com/ViGEm/ViGEmBus/releases and install it.
+
+            ## Note
+            - Tested 4K 120FPS on Windows 11, using software encoding and hardware encoding with a NVIDIA RTX 4060 GPU (H264 & AV1 Supported), AMD currently not tested yet.
+            - This release is intended for testing and feedback purposes.
+            - We encourage users to try Remo in different environments and provide any suggestions or report issues via GitHub Issues.
+            - The full, unrestricted version of Remo will be available soon, offering enhanced features. 
+            
+            *The current release is limited to HD resolution 60FPS and is built using GitHub Actions CI. It may trigger a false positive in antivirus scans.
           draft: false
           prerelease: false
